@@ -94,6 +94,7 @@ VisibilitySensor::initialize ()
 	isLive () .addInterest (this, &VisibilitySensor::set_enabled);
 
 	enabled () .addInterest (this, &VisibilitySensor::set_enabled);
+	size ()    .addInterest (this, &VisibilitySensor::set_enabled);
 
 	set_enabled ();
 }
@@ -119,7 +120,7 @@ throw (Error <INVALID_OPERATION_TIMING>,
 void
 VisibilitySensor::set_enabled ()
 {
-	if (enabled () and isLive () and getExecutionContext () -> isLive ())
+	if (enabled () and isLive () and getExecutionContext () -> isLive () and size () not_eq Vector3f ())
 		getBrowser () -> sensors () .addInterest (this, &VisibilitySensor::update);
 
 	else
