@@ -4,6 +4,10 @@
 
 2014-10-30  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SAT.h: 
+
+2014-10-30  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* libtitania-standard.cproj:
 	* SAT.h: 
 
